Add readOnly in services